[package]
name = "stream-deck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
wayland-sys = "0.29.4"
wayland-client = "0.29.4"
wayland-commons = "0.29.4"
gamescope-protocol = { version = "0.0.1", features = ["client", "server"] }
gstreamer = "0.18.6"
glib = "0.15.10"
anyhow = "1.0"

[build-dependencies]
wayland-scanner = "0.29.4"

[[bin]]
name = "stream-deck"
path = "main.rs"