[package]
name = "stream-deck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.18.6"
gst-plugin = "0.3.2"
glib = "0.15.10"
gio = "0.15.10"
gtk = "0.15.4"

[[bin]]
name = "stream-deck"
path = "src/main.rs"